--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
   },
   "author": "laichuanfeng",
   "license": "MIT",
-  "dependencies": {
-    "express": "^4.13.3"
-  },
+  "dependencies": {},
   "devDependencies": {},
   "repository": {
     "type": "git",
