--- a/myapp/bower.json
+++ b/myapp/bower.json
@@ -22,6 +22,7 @@
   ],
   "dependencies": {
     "jquery": "~2.1.4",
-    "semantic": "semantic-ui#~2.1.6"
+    "semantic": "semantic-ui#~2.1.6",
+    "requirejs": "~2.1.22"
   }
 }
