--- a/myapp/package.json
+++ b/myapp/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.1.1",
     "express": "~4.12.2",
     "jade": "~1.9.2",
+    "mongodb": "^2.0.49",
     "morgan": "~1.5.1",
     "multer": "^1.1.0",
     "mysql": "^2.9.0",
