--- a/myapp/package.json
+++ b/myapp/package.json
@@ -16,5 +16,11 @@
     "multer": "^1.1.0",
     "mysql": "^2.9.0",
     "serve-favicon": "~2.2.0"
+  },
+  "devDependencies": {
+    "gulp-notify": "^2.2.0",
+    "gulp-sourcemaps": "^1.5.1",
+    "gulp-typescript": "^2.10.0",
+    "gulp-uglify": "^1.5.1"
   }
 }
