--- a/myapp/package.json
+++ b/myapp/package.json
@@ -21,6 +21,7 @@
     "gulp-notify": "^2.2.0",
     "gulp-sourcemaps": "^1.5.1",
     "gulp-typescript": "^2.10.0",
-    "gulp-uglify": "^1.5.1"
+    "gulp-uglify": "^1.5.1",
+    "minimist": "^1.2.0"
   }
 }
